--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
-flask 
-flask-sqlalchemy
-pandas
-numpy
-flask_restful
-flask_login
+aniso8601==9.0.1
+blinker==1.8.2
+click ==8.1.7
+colorama == 0.4.6
+Flask == 3.0.3
+Flask-Login == 0.6.3
+Flask-RESTful== 0.3.10
+Flask-SQLAlchemy==3.1.1
+greenlet == 3.1.1
+itsdangerous==2.2.0
+Jinja2 ==3.1.4
+MarkupSafe ==3.0.1
+numpy ==2.1.2
+pandas == 2.2.3
+pip==24.2
+python-dateutil==2.9.0.post0
+pytz==2024.2
+setuptools==65.5.0
+six==1.16.0
+SQLAlchemy==2.0.35
+typing_extensions==4.12.2
+tzdata==2024.2
+Werkzeug==3.0.4
