changes in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ doubts.md
 roughnav1.html
 roughnav.html
 roughnav2.html
+static/documents/users/professionals/resume/*
+static/images/users/*
+static/images/users/default-admin.jpg
+static/images/users/default-user.jpg
